feat: add pupils statistics

--- a/index.html
+++ b/index.html
@@ -381,6 +381,10 @@
 
     </div>
 
+    <div class="table-pupils-wrapper">
+      
+    </div>
+
     <div class="paganation statistics__paganation">
       <a href="#" class="paganation__item paganation__item--active">1</a>
       <a href="#" class="paganation__item">2</a>
