fix: add id to list

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
       <div class="favorite-quantity__title">quantity of favorite teachers</div>
       <button class="btn favorite-quantity__btn">clear favorites</button>
     </div>
-    <ul class="teachers-list top-teachers__list">
+    <ul id="top-teachers-list" class="teachers-list top-teachers__list">
       <!-- <li class="teacher-item teachers-list__item">
           <img src="images/avatar.jpg" alt="avatar" class="teacher-item__img">
           <div class="teacher-item__name">Ihor <br> Tkachuk</div>
@@ -382,7 +382,7 @@
     </div>
 
     <div class="table-pupils-wrapper">
-      
+
     </div>
 
     <div class="paganation statistics__paganation">
