refac: change selector for tables

--- a/index.html
+++ b/index.html
@@ -377,11 +377,11 @@
 
   <section class="statistics container">
     <div class="title statistics__title">Statistics</div>
-    <div class="table-wrapper">
+    <div id="table-teachers-wrapper" class="statistics-table statistics__table-item">
 
     </div>
 
-    <div class="table-pupils-wrapper">
+    <div id="table-pupils-wrapper" class="statistics-table statistics__table-item">
 
     </div>
 
