feat: add selector for "favorites" section

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
   </section>
 
   <section class="favorites container">
-    <div class="title">Favorites</div>
+    <div class="title favorites__title">Favorites</div>
     <ul class="teachers-list favorite-teachers-list">
       <!-- <li class="teacher-item favorites__item">
           <img src="images/avatar.jpg" alt="avatar" class="teacher-item__img">
